face recognition real time

--- a/face_recognition.ipynb
+++ b/face_recognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "c1b7fbc5",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
     "]\n",
     "\n",
     "# Load test image to find faces in\n",
-    "test_image = face_recognition.load_image_file('./img/groups/team1.jpg')\n",
+    "test_image = face_recognition.load_image_file('./img/groups/bill-steve-elon.jpg')\n",
     "\n",
     "# Find faces in test image\n",
     "face_locations = face_recognition.face_locations(test_image)\n",
